<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo_recoverypass" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/imgLogoLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_textbox" />

    <TextView
        android:id="@+id/tvRecover"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogoLogin"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/khoiphucmatkhau"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvRecoverDecrip"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/chitietkhoiphuc"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvRecover"
        android:layout_marginTop="5dp"/>

    <com.example.anhki.tradingbook.CustomView.ClearEditText
        android:id="@+id/edRecoveryEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRecoverDecrip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="Email"/>

    <Button
        android:id="@+id/btnRecovery"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/guimail"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edRecoveryEmail"
        android:layout_marginTop="10dp"
        android:background="@color/colorGreen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuacotaikhoan"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/btnRecovery"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@id/btnRecovery"
            android:textSize="14dp"
            />

        <TextView
            android:id="@+id/tvRegisterRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/btnRecovery"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@id/btnRecovery"
            android:textSize="14dp"/>
</RelativeLayout>