<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <LinearLayout
            android:id="@+id/linenear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGreen">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_arrow_back_ios_white_18dp"
                android:background="@color/colorGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Xác nhận thông tin"
                android:textSize="22sp"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingRight="30dp"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/rllayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login_textbox"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/tvNameTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tên: "
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="Lê Mỹ Thiên Thanh"
            android:layout_alignTop="@+id/tvNameTemp"
            android:layout_marginStart="180dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/teName"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="Lê Mỹ Thiên Thanh"
            android:layout_marginTop="20sp"
            android:layout_marginStart="180dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdtt"
            android:layout_alignStart="@+id/tvNameTemp"
            android:textSize="20sp"
            android:layout_alignTop="@+id/tvPhone"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0123456789"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvName"
            android:layout_alignTop="@+id/tvNameTemp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/tePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0123456789"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvName"
            android:layout_alignTop="@+id/tvNameTemp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diem"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvNameTemp"
            android:layout_alignTop="@+id/tvPhone"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvName"
            android:layout_alignTop="@+id/tvPhone"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvAddressTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diachii"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvNameTemp"
            android:layout_alignTop="@+id/tvPoint"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="Abc"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvAddressTemp"
            android:layout_alignTop="@+id/tvAddressTemp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/teAddress"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="Abc"
            android:textSize="20sp"
            android:layout_alignStart="@+id/tvAddressTemp"
            android:layout_alignTop="@+id/tvAddressTemp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorBlack"
        android:layout_alignBottom="@+id/tvPointBonus"
        android:layout_marginBottom="30dp"
        android:layout_alignStart="@+id/btnEdit"/>

    <TextView
        android:id="@+id/tvSumPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30.000 VNĐ"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorBlack"
        android:layout_alignBottom="@+id/tvPointBonus"
        android:layout_marginBottom="30dp"
        android:layout_alignStart="@+id/btnEdit"
        android:layout_marginStart="110dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonuspoint"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorBlack"
        android:layout_alignBottom="@+id/btnEdit"
        android:layout_marginBottom="60dp"
        android:layout_alignStart="@+id/btnEdit"/>

    <TextView
        android:id="@+id/tvPointBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorBlack"
        android:layout_alignBottom="@+id/btnEdit"
        android:layout_marginBottom="60dp"
        android:layout_alignStart="@+id/btnEdit"
        android:layout_marginStart="110dp"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/chinhsua"
        android:layout_alignBottom="@+id/btnConfirm"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGreen"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignBottom="@+id/btnConfirm"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGreen"
        />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/thanhtoan"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGreen"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>